--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -26,6 +26,29 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
+  scroll-snap-type: y mandatory; /* Enables vertical scroll snapping */
+  overflow-y: scroll; /* Ensures the vertical scrollbar is enabled */
+  height: 100vh; /* Ensures body takes full viewport height */
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  scroll-snap-align: start; /* Aligns the start of each section */
+  height: 100vh; /* Makes each section take the full height of the viewport */
+}
+
+
+#three-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -20;
 }
 
 
